--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                     
                 </div>
                 <div class="shell-main-bottom">
-                    <h2><span>在</span>售商品:</h2>
+                    <h2><span>一</span>些过程:</h2>
                     <div class="shell-main-bottom-bottom">
                         <ul>
                             <li>
